--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,8 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.11.0",
     "puppeteer": "^23.5.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react-router-dom": "^6.26.1",
     "social-login": "^0.2.8"
   },
