--- a/client/package.json
+++ b/client/package.json
@@ -48,6 +48,9 @@
   "devDependencies": {
     "@types/cheerio": "^0.22.35",
     "@types/jwt-decode": "^3.1.0",
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14"
   }
 }
